# minARImageGen

./: .gitignore  README.md  log.md  main.py  overfit_one_batch.py  pyproject.toml  setup.sh  train_flextok.py  train_vqvae.py  var.py  vqvae.py
data/: classes.py  download_imagenet.py
models/: layers.py  quant.py  ref_vae.py  tokenizer.py  var.py  vqvae.py
utils/: gan.py  imagenet_dataset.py  losses.py  lpips.py
utils/evaluate/: fid.py
