[project]
name = "minvar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.29.2",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb[media]>=0.19.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
