[project]
name = "minvar-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.29.2",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb[media]>=0.19.8",
]

[dependency-groups]
dev = [
    "accelerate>=1.4.0",
    "diffusers>=0.32.2",
    "ipykernel>=6.29.5",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
]
